Use a text node instead of a span

--- a/demo.html
+++ b/demo.html
@@ -177,6 +177,7 @@ fixed(function a() {}, 'a')
 fixed(new A(), 'aClassInstance')
 fixed(new A(), 'aClassInstance')
 rejected(new Error(), 'myErrorCell')
+fixed(new Error(), 'myErrorValue')
 fixed(A, 'aClass')
 fixed(true, 'hasCarrots')
 fixed(undefined, 'isUndefined')
