--- a/demo.html
+++ b/demo.html
@@ -177,6 +177,7 @@ function rejected(input, name) {
 }
 
 class A { b() {} }
+A.prototype.hi = 'hi';
 fixed([1, 2, 3, [2, 3]], 'b')
 fixed(function a() {}, 'a')
 fixed(new A(), 'aClassInstance')
